--- a/www/blogPostApp/templates/article.html
+++ b/www/blogPostApp/templates/article.html
@@ -1,16 +1,20 @@
 {%include 'basepage.html'%}
+{%include 'navbar.html'%}
 <!DOCTYPE html>
 <head>
     <title>Misplaced Minds - {{article.title}}</title>
-    <br><h1>{{article.title}}<br><hr></h1>
 </head>
-<body>
+<body style="background-color: lightblue;">
+    <div class="container">
+    <br><h1>{{article.title}}<br><hr></h1>
     {% load static %}
     <img src="{% static '' %}{{photo}}" alt="My image" height=400 >
     
     <p>{{article.content}}</p>
+    <p><hr>{{article.timestamp}} by {{article.author}} </p>
+</div>
 </body>
 <footer>
-    <p><hr>{{article.timestamp}} by {{article.author}} </p>
+    
 </footer>
 </html>
