--- a/www/blogPostApp/templates/basepage.html
+++ b/www/blogPostApp/templates/basepage.html
@@ -2,9 +2,15 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        
     </head>
-    <body class="container">
-        
+    <body>
+
     </body>
 </html>
+
+<style>
+    html
+    {
+        background-color:lightblue;
+    }
+</style>
